--- a/3rdparty/apriltag_umich/CMakeLists.txt
+++ b/3rdparty/apriltag_umich/CMakeLists.txt
@@ -11,28 +11,29 @@ include_directories(include)
 if(USE_ROS)
     find_package(catkin REQUIRED)
     catkin_package(
-        CATKIN_DEPENDS
         INCLUDE_DIRS include
         LIBRARIES ${PROJECT_NAME}
         )
-else(USE_ROS)
+else()
     message(STATUS "Source: " ${PROJECT_SOURCE_DIR})
     message(STATUS "Binary: " ${PROJECT_BINARY_DIR})
     set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
     set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
     link_directories(${PROJECT_SOURCE_DIR}/lib)
-endif(USE_ROS)
+endif()
 
-find_package(OpenCV REQUIRED)
-include_directories(include/apriltag
+#find_package(OpenCV REQUIRED)
+include_directories(
+    include/apriltag
     include/apriltag/common
-    ${OpenCV_INCLUDE_DIRS}
+    #${OpenCV_INCLUDE_DIRS}
     )
 
 file(GLOB C_FILES
     ${PROJECT_SOURCE_DIR}/src/*.c
     ${PROJECT_SOURCE_DIR}/src/common/*.c)
 list(REMOVE_ITEM C_FILES ${PROJECT_SOURCE_DIR}/src/apriltag_demo.c)
+
 add_library(${PROJECT_NAME} SHARED ${C_FILES})
 target_link_libraries(${PROJECT_NAME}
     ${CMAKE_THREAD_LIBS_INIT}
