--- a/apriltag_ros/CMakeLists.txt
+++ b/apriltag_ros/CMakeLists.txt
@@ -6,9 +6,9 @@ set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -Wall")
 find_package(catkin REQUIRED COMPONENTS
     roscpp image_transport cv_bridge image_geometry
     sensor_msgs geometry_msgs message_generation
-    apriltag_mit std_msgs rviz_helper kr_cmake_modules
+    std_msgs
     )
-find_package(Gtsam)
+#find_package(Gtsam)
 
 add_message_files(DIRECTORY msg FILES Apriltag.msg Apriltags.msg)
 generate_messages(DEPENDENCIES std_msgs geometry_msgs)
@@ -22,41 +22,41 @@ include_directories(
     )
 
 # apriltag_ros library
-add_library(${PROJECT_NAME}
-    src/mapper/mapper.cpp
-    src/mapper/tag_map.cpp
-    src/utils/utils.cpp
-    src/visualizer/visualizer.cpp
-    src/detector/detector_node.cpp
-    src/mapper/mapper_node.cpp
-    )
-target_link_libraries(${PROJECT_NAME}
-    ${catkin_LIBRARIES}
-    ${Gtsam_LIBRARIES}
-    )
+#add_library(${PROJECT_NAME}
+#src/mapper/mapper.cpp
+#src/mapper/tag_map.cpp
+#src/utils/utils.cpp
+#src/visualizer/visualizer.cpp
+#src/detector/detector_node.cpp
+#src/mapper/mapper_node.cpp
+#)
+#target_link_libraries(${PROJECT_NAME}
+#${catkin_LIBRARIES}
+#${Gtsam_LIBRARIES}
+#)
 
 # detector node
-add_executable(detector_node
-    src/detector/detector_main.cpp
-    )
-target_link_libraries(detector_node
-    ${PROJECT_NAME}
-    )
+#add_executable(detector_node
+#src/detector/detector_main.cpp
+#)
+#target_link_libraries(detector_node
+#${PROJECT_NAME}
+#)
 
-add_executable(mapper_node
-    src/mapper/mapper_main.cpp
-    )
-target_link_libraries(mapper_node
-    ${PROJECT_NAME}
-    )
+#add_executable(mapper_node
+#src/mapper/mapper_main.cpp
+#)
+#target_link_libraries(mapper_node
+#${PROJECT_NAME}
+#)
 
 # dependencies
-add_dependencies(${PROJECT_NAME}
-    ${catkin_EXPORTED_TARGETS}
-    ${PROJECT_NAME}_gencfg
-    ${PROJECT_NAME}_gencpp
-    ${${PROJECT_NAME}_EXPORTED_TARGETS}
-    )
+#add_dependencies(${PROJECT_NAME}
+#${catkin_EXPORTED_TARGETS}
+#${PROJECT_NAME}_gencfg
+#${PROJECT_NAME}_gencpp
+#${${PROJECT_NAME}_EXPORTED_TARGETS}
+#)
 
 # Map generator
 #add_executable(generate_map
