--- a/apriltag_umich/package.xml
+++ b/apriltag_umich/package.xml
@@ -1,13 +1,10 @@
-<?xml version="1.0"?>
 <package>
-    <name>apriltag_umich</name>
-    <version>2.0.0</version>
-    <description>
-        A C Apriltag library
-    </description>
-    <author>Edwin Olson</author>
-    <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
-    <license>GPLv3</license>
+  <name>apriltag_umich</name>
+  <version>2.0.0</version>
+  <description>A C Apriltag library</description>
+  <author>Edwin Olson</author>
+  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
+  <license>GPLv3</license>
 
-    <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 </package>
