--- a/apriltag_mit/CMakeLists.txt
+++ b/apriltag_mit/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required(VERSION 2.8.3)
 project(apriltag_mit)
 
 set(USE_ROS TRUE)
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -fPIC")
+
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE RelWithDebInfo)
+endif()
 
 find_package(cmake_modules)
 find_package(Eigen REQUIRED)
@@ -32,20 +35,7 @@ endif()
 
 file(GLOB CC_FILES ${PROJECT_SOURCE_DIR}/src/*.cc)
 add_library(${PROJECT_NAME} SHARED ${CC_FILES})
-target_link_libraries(${PROJECT_NAME}
-    ${OpenCV_LIBRARIES}
-    ${Eigen_LIBRARIES}
-    )
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
 
-add_executable(test_apriltag_mit
-    src/test/test_apriltag_mit.cpp)
-target_link_libraries(test_apriltag_mit
-    ${OpenCV_LIBRARIES}
-    ${PROJECT_NAME}
-    )
-
-if(USE_ROS)
-    add_dependencies(${PROJECT_NAME}
-        ${catkin_EXPORTED_TARGETS}
-        )
-endif()
+add_executable(test_apriltag_mit src/test/test_apriltag_mit.cpp)
+target_link_libraries(test_apriltag_mit ${PROJECT_NAME})
