--- a/apriltag_mit/package.xml
+++ b/apriltag_mit/package.xml
@@ -1,9 +1,7 @@
-<package>
+<package format="2">
   <name>apriltag_mit</name>
-  <version>0.1.0</version>
-  <description>
-    A C++ Apriltag library
-  </description>
+  <version>0.2.0</version>
+  <description>A C++ Apriltag library</description>
   <author>Michael Kaess</author>
   <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
   <license>GPLv3</license>
@@ -11,4 +9,5 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>cmake_modules</build_depend>
+  <depend>roslib</depend>
 </package>
