finish test for both apriltag_mit and apriltag_umich

--- a/apriltag_mit/CMakeLists.txt
+++ b/apriltag_mit/CMakeLists.txt
@@ -21,7 +21,7 @@ if(USE_ROS)
     find_package(catkin REQUIRED COMPONENTS roslib)
     catkin_package(
         DEPENDS Eigen OpenCV
-        CATKIN_DEPENDS
+        CATKIN_DEPENDS roslib
         INCLUDE_DIRS include
         LIBRARIES ${PROJECT_NAME}
         )
