--- a/apriltag_umich/CMakeLists.txt
+++ b/apriltag_umich/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 2.8)
 project(apriltag_umich)
 
 set(USE_ROS TRUE)
-add_definitions(-std=gnu99 -fPIC)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+add_definitions(-fPIC -Wall)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE RelWithDebInfo)
@@ -11,8 +13,11 @@ endif()
 find_package (Threads)
 
 if(USE_ROS)
-    find_package(catkin REQUIRED)
+    find_package(catkin REQUIRED COMPONENTS roslib)
+    find_package(OpenCV)
     catkin_package(
+        DEPENDS OpenCV
+        CATKIN_DEPENDS roslib
         INCLUDE_DIRS include
         LIBRARIES ${PROJECT_NAME}
         )
@@ -24,7 +29,6 @@ else()
     link_directories(${PROJECT_SOURCE_DIR}/lib)
 endif()
 
-#find_package(OpenCV REQUIRED)
 include_directories(
     include
     include/apriltag
@@ -38,3 +42,12 @@ list(REMOVE_ITEM C_FILES ${PROJECT_SOURCE_DIR}/src/apriltag_demo.c)
 
 add_library(${PROJECT_NAME} SHARED ${C_FILES})
 target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
+
+if(USE_ROS)
+    include_directories(${catkin_INCLUDE_DIRS})
+    add_executable(test_apriltag_umich src/test/test_apriltag_umich.cpp)
+    target_link_libraries(test_apriltag_umich
+        ${PROJECT_NAME}
+        ${OpenCV_LIBRARIES}
+        ${catkin_LIBRARIES})
+endif()
