--- a/apriltag_umich/package.xml
+++ b/apriltag_umich/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="2">
   <name>apriltag_umich</name>
   <version>2.0.0</version>
   <description>A C Apriltag library</description>
@@ -7,4 +7,6 @@
   <license>GPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+
+  <depend>roslib</depend>
 </package>
