--- a/apriltag_mit/CMakeLists.txt
+++ b/apriltag_mit/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required(VERSION 2.8.3)
 project(apriltag_mit)
 
 set(USE_ROS TRUE)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -fPIC")
+include(cmake/apriltag_mit-extras.cmake)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE RelWithDebInfo)
 endif()
 
-find_package(cmake_modules)
+find_package(cmake_modules REQUIRED)
 find_package(Eigen REQUIRED)
 find_package(OpenCV REQUIRED)
 
@@ -21,9 +21,9 @@ if(USE_ROS)
     find_package(catkin REQUIRED COMPONENTS roslib)
     catkin_package(
         DEPENDS Eigen OpenCV
-        CATKIN_DEPENDS roslib
         INCLUDE_DIRS include
         LIBRARIES ${PROJECT_NAME}
+        CFG_EXTRAS apriltag_mit-extras.cmake
         )
 else()
     message(STATUS "Source:  " ${PROJECT_SOURCE_DIR})
@@ -37,9 +37,11 @@ file(GLOB CC_FILES ${PROJECT_SOURCE_DIR}/src/*.cc)
 add_library(${PROJECT_NAME} SHARED ${CC_FILES})
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
 
-if(USE_ROS)
+if(CATKIN_ENABLE_TESTING)
     include_directories(${catkin_INCLUDE_DIRS})
-    add_executable(test_apriltag_mit src/test/test_apriltag_mit.cpp)
+    catkin_add_gtest(test_apriltag_mit test/test_apriltag_mit.cpp)
     target_link_libraries(test_apriltag_mit
-        ${PROJECT_NAME} ${catkin_LIBRARIES})
+        ${PROJECT_NAME}
+        ${catkin_LIBRARIES}
+        )
 endif()
