--- a/apriltag_mit/package.xml
+++ b/apriltag_mit/package.xml
@@ -8,6 +8,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>cmake_modules</build_depend>
+  <depend>cmake_modules</depend>
   <depend>roslib</depend>
+
+  <test_depend>rosunit</test_depend>
 </package>
