--- a/apriltag_ros/package.xml
+++ b/apriltag_ros/package.xml
@@ -1,21 +1,23 @@
 <package format="2">
-    <name>apriltag_ros</name>
-    <version>0.0.1</version>
-    <description>The apriltag ros package</description>
-    <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
-    <author>Chao Qu</author>
-    <license>BSD</license>
+  <name>apriltag_ros</name>
+  <version>1.0.0</version>
+  <description>The apriltag ros package</description>
+  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
+  <author>Chao Qu</author>
+  <license>BSD</license>
 
-    <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
-    <depend>roscpp</depend>
-    <depend>image_transport</depend>
-    <depend>cv_bridge</depend>
-    <depend>std_msgs</depend>
+  <depend>roscpp</depend>
+  <depend>cv_bridge</depend>
+  <depend>image_transport</depend>
+  <depend>iamge_geometry</depend>
 
-    <depend>apriltag_mit</depend>
-    <depend>apriltag_umich</depend>
-    <depend>apriltag_msgs</depend>
+  <depend>apriltag_mit</depend>
+  <depend>apriltag_umich</depend>
+  <depend>apriltag_msgs</depend>
 
-    <test_depend>rosunit</test_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <test_depend>rosunit</test_depend>
 </package>
