--- a/apriltag_ros/package.xml
+++ b/apriltag_ros/package.xml
@@ -11,7 +11,8 @@
   <depend>roscpp</depend>
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
-  <depend>iamge_geometry</depend>
+  <depend>image_geometry</depend>
+  <depend>dynamic_reconfigure</depend>
 
   <depend>apriltag_mit</depend>
   <depend>apriltag_umich</depend>
