fix test_apriltag_detector unittest

--- a/apriltag_ros/CMakeLists.txt
+++ b/apriltag_ros/CMakeLists.txt
@@ -27,10 +27,6 @@ target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 add_executable(apriltag_detector_node src/apriltag_detector_node.cpp)
 target_link_libraries(apriltag_detector_node ${catkin_LIBRARIES})
 
-# Hacky test
-add_executable(test_apriltag_detector test/test_apriltag_detector.cpp)
-target_link_libraries(test_apriltag_detector ${PROJECT_NAME})
-
 add_dependencies(apriltag_detector_node
     ${catkin_EXPORTED_TARGETS}
     ${PROJECT_NAME}_gencfg
@@ -41,8 +37,14 @@ add_dependencies(apriltag_detector_node
 if(CATKIN_ENABLE_TESTING)
     catkin_add_gtest(gtest_apriltag_ros
         test/gtest_apriltag_ros.cpp
-        test/test_timer.cpp)
-    target_link_libraries(gtest_apriltag_ros ${catkin_LIBRARIES})
+        test/test_timer.cpp
+        test/test_apriltag_detector.cpp
+        )
+    target_link_libraries(
+        gtest_apriltag_ros
+        ${catkin_LIBRARIES}
+        ${PROJECT_NAME}
+        )
 endif()
 
 # apriltag_ros library
