--- a/apriltag_ros/cfg/ApriltagDyn.cfg
+++ b/apriltag_ros/cfg/ApriltagDyn.cfg
@@ -7,10 +7,14 @@ gen = ParameterGenerator()
 
 gen.add("refine", bool_t, 0, "Refine edges(umich) or corners (mit)", False)
 gen.add("decimate", double_t, 0, "Decimate input image by this factor", 1.0, 1.0, 3.0)
-tag_family_enum = gen.enum([gen.const("36h11", int_t, 0, "36h11"),
-                            gen.const("25h9", int_t, 1, "25h9"),
-                            gen.const("16h5", int_t, 2, "16h5")],
-                            "An enum to set tag family")
-gen.add("tag_family", int_t, 0, "tag family", 0, 0, 2, edit_method=tag_family_enum)
+family_enum = gen.enum([gen.const("36h11", int_t, 0, "36h11"),
+                        gen.const("25h9", int_t, 1, "25h9"),
+                        gen.const("16h5", int_t, 2, "16h5")],
+                        "An enum to set tag family")
+gen.add("family", int_t, 0, "tag family", 0, 0, 2, edit_method=family_enum)
+type_enum = gen.enum([gen.const("mit", int_t, 0, "mit"),
+                      gen.const("umich", int_t, 1, "umich")],
+                      "An enum to set detector type")
+gen.add("type", int_t, 0, "detector type", 0, 0, 1, edit_method=type_enum)
 
 exit(gen.generate(PACKAGE, "apriltag_ros", "ApriltagDyn"))
