--- a/apriltag_rviz/package.xml
+++ b/apriltag_rviz/package.xml
@@ -7,7 +7,9 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+
   <depend>rviz</depend>
+  <depend>apriltag_msgs</depend>
 
   <export>
   </export>
