--- a/apriltag_gen/package.xml
+++ b/apriltag_gen/package.xml
@@ -9,6 +9,8 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>apriltag_mit</depend>
+  <depend>apriltag_msgs</depend>
 
   <export>
   </export>
