add unittest to apriltag_gen

--- a/apriltag_gen/package.xml
+++ b/apriltag_gen/package.xml
@@ -11,6 +11,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>apriltag_mit</depend>
   <depend>apriltag_msgs</depend>
+  <test_depend>rosunit</test_depend>
 
   <export>
   </export>
