--- a/apriltag_mit/CMakeLists.txt
+++ b/apriltag_mit/CMakeLists.txt
@@ -39,8 +39,8 @@ target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
 
 if(CATKIN_ENABLE_TESTING)
     include_directories(${catkin_INCLUDE_DIRS})
-    catkin_add_gtest(test_apriltag_mit test/test_apriltag_mit.cpp)
-    target_link_libraries(test_apriltag_mit
+    catkin_add_gtest(test_${PROJECT_NAME} test/test_${PROJECT_NAME}.cpp)
+    target_link_libraries(test_${PROJECT_NAME}
         ${PROJECT_NAME}
         ${catkin_LIBRARIES}
         )
