--- a/apriltag_ros/cfg/ApriltagDyn.cfg
+++ b/apriltag_ros/cfg/ApriltagDyn.cfg
@@ -6,10 +6,13 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 gen = ParameterGenerator()
 
 gen.add("refine", bool_t, 0,
-        "Refine edges(umich) or corners (mit)", False)
+        "Refine edges(umich) or corners (mit)",
+        False)
 
-gen.add("decimate", double_t, 0,
-        "Decimate input image by this factor", 1.0, 1.0, 3.0)
+gen.add("decimate", int_t, 0,
+        "Decimate input image by this factor",
+        1, 1, 2)
+
 family_enum = gen.enum([gen.const("36h11", int_t, 0, "36h11"),
                         gen.const("25h9", int_t, 1, "25h9"),
                         gen.const("16h5", int_t, 2, "16h5")],
