--- a/apriltag_ros/src/CMakeLists.txt
+++ b/apriltag_ros/src/CMakeLists.txt
@@ -1,8 +1,12 @@
 add_library(${PROJECT_NAME}
     apriltag_detector.cpp
     apriltag_detection.cpp
+    apriltag_map.cpp
     )
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}
+    ${catkin_LIBRARIES}
+    yaml-cpp
+    )
 
 add_executable(apriltag_detector_node apriltag_detector_node.cpp)
 target_link_libraries(apriltag_detector_node
