--- a/apriltag_ros/CMakeLists.txt
+++ b/apriltag_ros/CMakeLists.txt
@@ -7,9 +7,9 @@ find_package(OpenCV REQUIRED)
 find_package(Boost REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
     roscpp dynamic_reconfigure message_generation
-    image_transport cv_bridge
+    image_transport cv_bridge message_filters
     apriltag_mit apriltag_umich apriltag_msgs
-    sv_base tf2_ros
+    sv_base tf2_ros rosbag image_geometry
     )
 
 generate_dynamic_reconfigure_options(cfg/ApriltagDetectorDyn.cfg)
