--- a/apriltag_ros/package.xml
+++ b/apriltag_ros/package.xml
@@ -9,10 +9,13 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>roscpp</depend>
+  <depend>rosbag</depend>
   <depend>tf2_ros</depend>
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
   <depend>dynamic_reconfigure</depend>
+  <depend>message_filters</depend>
+  <depend>image_geometry</depend>
 
   <depend>apriltag_mit</depend>
   <depend>apriltag_umich</depend>
