--- a/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
+++ b/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
@@ -13,9 +13,9 @@ gen.add("decimate", int_t, 0,
         "Decimate input image by this factor",
         1, 1, 2)
 
-family_enum = gen.enum([gen.const("36h11", int_t, 0, "36h11"),
-                        gen.const("25h9", int_t, 1, "25h9"),
-                        gen.const("16h5", int_t, 2, "16h5")],
+family_enum = gen.enum([gen.const("t36h11", int_t, 0, "t36h11"),
+                        gen.const("t25h9", int_t, 1, "t25h9"),
+                        gen.const("t16h5", int_t, 2, "t16h5")],
                        "An enum to set tag family")
 gen.add("family", int_t, 0,
         "tag family", 0, 0, 2,
