apriltag detector node is not responsible for estimating pose of the tag

--- a/apriltag_ros/CMakeLists.txt
+++ b/apriltag_ros/CMakeLists.txt
@@ -2,14 +2,14 @@ cmake_minimum_required(VERSION 2.8.3)
 project(apriltag_ros)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -Wall")
+set(CMAKE_BUILD_TYPE RelWithDebInfo)
 
 find_package(OpenCV REQUIRED)
 find_package(Boost REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
     roscpp dynamic_reconfigure message_generation
-    image_transport cv_bridge tf2_ros
+    image_transport cv_bridge
     apriltag_mit apriltag_umich apriltag_msgs
-    sv_base
     )
 
 generate_dynamic_reconfigure_options(cfg/ApriltagDetectorDyn.cfg)
@@ -18,7 +18,7 @@ catkin_package(
     INCLUDE_DIRS include
     LIBRARIES ${PROJECT_NAME}
     CATKIN_DEPENDS roscpp dynamic_reconfigure message_runtime image_transport
-    cv_bridge tf2_ros apriltag_mit apriltag_umich apriltag_msgs sv_base
+    cv_bridge tf2_ros apriltag_mit apriltag_umich apriltag_msgs
     DEPENDS OpenCV
     )
 
