--- a/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
+++ b/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
@@ -29,7 +29,7 @@ gen.add("type", int_t, 0,
         edit_method=type_enum)
 
 gen.add("black_border", int_t, 0,
-        "black border around the tag",
+        "black border around the tag in bits",
         1, 1, 2)
 
 exit(gen.generate(PACKAGE, "apriltag_ros", "ApriltagDetectorDyn"))
