--- a/apriltag_ros/test/CMakeLists.txt
+++ b/apriltag_ros/test/CMakeLists.txt
@@ -16,5 +16,5 @@ target_link_libraries(playground
     ${catkin_LIBRARIES}
     )
 
-add_executable(test_apriltag_map test_apriltag_map.cpp)
-target_link_libraries(test_apriltag_map ${PROJECT_NAME})
+#add_executable(test_apriltag_map test_apriltag_map.cpp)
+#target_link_libraries(test_apriltag_map ${PROJECT_NAME})
