--- a/apriltag/package.xml
+++ b/apriltag/package.xml
@@ -1,7 +1,7 @@
 <package>
-  <name>sv_apriltag</name>
+  <name>apriltag</name>
   <version>0.1.0</version>
-  <description>The sv_apriltag package</description>
+  <description>The apriltag package</description>
   <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
   <license>BSD</license>
 
