--- a/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
+++ b/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
@@ -1,16 +1,15 @@
 #!/usr/bin/env python2
-PACKAGE = "apriltag_ros"
-
 from dynamic_reconfigure.parameter_generator_catkin import *
+PACKAGE = "apriltag_ros"
 
 gen = ParameterGenerator()
 
 gen.add("refine", bool_t, 0,
-        "Refine edges(umich) or corners (mit)",
+        "Refine edges(umich) or corners (both)",
         False)
 
 gen.add("decimate", int_t, 0,
-        "Decimate input image by this factor",
+        "Decimate input image by this factor (speed+, accuracy-)",
         1, 1, 2)
 
 family_enum = gen.enum([gen.const("t36h11", int_t, 0, "t36h11"),
