--- a/apriltag_umich/CMakeLists.txt
+++ b/apriltag_umich/CMakeLists.txt
@@ -38,7 +38,7 @@ file(GLOB C_FILES
 list(REMOVE_ITEM C_FILES ${PROJECT_SOURCE_DIR}/src/apriltag_demo.c)
 
 add_library(${PROJECT_NAME} SHARED ${C_FILES})
-target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT} m)
 
 #if(CATKIN_ENABLE_TESTING)
 if(FALSE)
