--- a/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
+++ b/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
@@ -4,13 +4,13 @@ PACKAGE = "apriltag_ros"
 
 gen = ParameterGenerator()
 
-gen.add("refine", bool_t, 0,
-        "Refine edges(umich) or corners (both)",
-        False)
+#gen.add("refine", bool_t, 0,
+#        "Refine edges(umich) or corners (both)",
+#        False)
 
-gen.add("decimate", int_t, 0,
-        "Decimate input image by this factor (speed+, accuracy-)",
-        1, 1, 2)
+#gen.add("decimate", int_t, 0,
+#        "Decimate input image by this factor (speed+, accuracy-)",
+#        1, 1, 2)
 
 family_enum = gen.enum([gen.const("t36h11", int_t, 0, "t36h11"),
                         gen.const("t25h9", int_t, 1, "t25h9"),
