--- a/apriltag_mit/package.xml
+++ b/apriltag_mit/package.xml
@@ -7,4 +7,7 @@
   <license>GPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>roslib</depend>
+  <test_depend>gtest</test_depend>
+  <test_depend>rosunit</test_depend>
 </package>
