added pose estimator

--- a/apriltag_msgs/CMakeLists.txt
+++ b/apriltag_msgs/CMakeLists.txt
@@ -9,6 +9,7 @@ add_message_files(
     FILES
     Apriltag.msg
     ApriltagArrayStamped.msg
+    ApriltagPoseStamped.msg
     )
 
 generate_messages(DEPENDENCIES geometry_msgs std_msgs)
