--- a/apriltag_ros/CMakeLists.txt
+++ b/apriltag_ros/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(OpenCV REQUIRED)
 find_package(Boost REQUIRED COMPONENTS program_options)
 find_package(catkin REQUIRED COMPONENTS
     roscpp dynamic_reconfigure message_generation
-    image_transport cv_bridge
+    image_transport image_geometry cv_bridge
     apriltag_mit apriltag_umich apriltag_msgs
     )
 
@@ -16,7 +16,7 @@ generate_dynamic_reconfigure_options(cfg/ApriltagDetectorDyn.cfg)
 catkin_package(
     INCLUDE_DIRS include
     LIBRARIES ${PROJECT_NAME}
-    CATKIN_DEPENDS roscpp dynamic_reconfigure message_runtime image_transport
+    CATKIN_DEPENDS roscpp dynamic_reconfigure message_runtime image_transport image_geometry
     cv_bridge apriltag_mit apriltag_umich apriltag_msgs
     )
 
@@ -24,22 +24,28 @@ include_directories(
     include
     ${catkin_INCLUDE_DIRS}
     ${Boost_INCLUDE_DIRS}
+    ${OpenCV_INCLUDE_DIRS}
     )
 
+message(ERROR ${OpenCV_INCLUDE_DIRS})
+message(ERROR ${OpenCV_LIBRARIES})
 add_library(${PROJECT_NAME} src/apriltag_detector.cpp)
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
 add_executable(apriltag_detector_node src/apriltag_detector_node.cpp)
-target_link_libraries(apriltag_detector_node ${PROJECT_NAME})
+target_link_libraries(apriltag_detector_node ${PROJECT_NAME} ${OpenCV_LIBRARIES})
 
 add_executable(apriltag_detect src/apriltag_detect.cpp)
-target_link_libraries(apriltag_detect ${PROJECT_NAME})
+target_link_libraries(apriltag_detect ${PROJECT_NAME} ${OpenCV_LIBRARIES})
+
+add_executable(apriltag_pose_estimator src/apriltag_pose_estimator.cpp)
+target_link_libraries(apriltag_pose_estimator ${PROJECT_NAME} ${OpenCV_LIBRARIES})
 
 add_dependencies(${PROJECT_NAME}
     ${catkin_EXPORTED_TARGETS}
     )
 
-install(TARGETS ${PROJECT_NAME} apriltag_detector_node apriltag_detect
+install(TARGETS ${PROJECT_NAME} apriltag_detector_node apriltag_detect apriltag_pose_estimator
     ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
     LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
     RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
