--- a/apriltag_ros/package.xml
+++ b/apriltag_ros/package.xml
@@ -11,6 +11,7 @@
   <depend>roscpp</depend>
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
+  <depend>image_geometry</depend>
   <depend>dynamic_reconfigure</depend>
 
   <depend>apriltag_mit</depend>
