--- a/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
+++ b/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
@@ -4,21 +4,24 @@ PACKAGE = "apriltag_ros"
 
 gen = ParameterGenerator()
 
+gen.add("max_hamming", int_t, 0,
+        "maximum hamming distance of detection",
+        1, 0, 5)
+
 gen.add("decimate", int_t, 0,
         "Decimate input image by this factor (speed+, accuracy-)",
-        1, 1, 2)
+        1, 1, 4)
+
+gen.add("sigma", double_t, 0,
+        "Gaussian blur standard deviation in pixels",
+        0.8, 0.1, 5)
 
 gen.add("nthreads", int_t, 0,
         "number of threads used",
         1, 1, 4)
 
-family_enum = gen.enum([gen.const("t36h11", int_t, 0, "t36h11"),
-                        gen.const("t25h9", int_t, 1, "t25h9"),
-                        gen.const("t16h5", int_t, 2, "t16h5")],
-                       "An enum to set tag family")
-gen.add("family", int_t, 0,
-        "tag family", 0, 0, 2,
-        edit_method=family_enum)
-
+gen.add("tag36h11", bool_t, 0, "tag36h11", True)
+gen.add("tag25h9", bool_t, 0, "tag25h9", False)
+gen.add("tag16h5", bool_t, 0, "tag16h5", False)
 
 exit(gen.generate(PACKAGE, "apriltag_ros", "ApriltagDetectorDyn"))
