--- a/apriltag_ros/package.xml
+++ b/apriltag_ros/package.xml
@@ -14,6 +14,7 @@
   <depend>dynamic_reconfigure</depend>
 
   <depend>apriltag</depend>
+  <depend>apriltag_msgs</depend>
 
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
